--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:vojzigYtjUWEKmDVREZYancJGziEIdAo@viaduct.proxy.rlwy.net:37743/railway
+DATABASE_URL=postgresql://postgres:qXdMRsMSGEgQvVrLuBjmUAGkytJwsaWk@trolley.proxy.rlwy.net:59123/railway
